Participant cards aligned correctly.

--- a/src/components/RoomPage/RoomPage.scss
+++ b/src/components/RoomPage/RoomPage.scss
@@ -4,10 +4,10 @@
   .activity-container {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    min-width: 600px;
     border-radius: 30px;
     animation: all 0.2s ease-out;
-    padding: 16px 32px 32px;
+    padding: 16px 16px 32px 32px;
     margin-bottom: 10vh;
 
     .title {
@@ -28,7 +28,11 @@
       align-items: center;
 
       svg {
-        margin: 0 4px;
+        margin: 0 8px;
+
+        &:hover {
+          color: rgba(0, 0, 0, 0.5);
+        }
       }
 
       p {
@@ -36,10 +40,39 @@
       }
     }
 
-    .participant-container {
+    .begin-button {
+      margin-top: 24px;
+      padding: 4px 8px;
+      background-color: white;
+    }
+
+    .participants-container {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
       margin-left: auto;
-      background-color: rgba(255, 255, 255, 1);
-      height: 100%;
+
+      .participant-card {
+        display: flex;
+        flex-direction: column;
+        background-color: rgba(255, 255, 255, 1);
+        height: 40px;
+        max-width: 100px;
+        margin: 8px 4px;
+        padding: 8px;
+        border-radius: 8px;
+        text-align: center;
+
+        .participant-name {
+          margin: 4px 0;
+          padding: 0;
+          font-size: 14px;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          display: block;
+          overflow: hidden;
+        }
+      }
     }
 
     .copy-tooltip {
